tests/paczka1/small_fuzzy/70129958.err
Error in line 7: e452138 S188 90,78
Error in line 3: K85RQKOCl S718 7,0
Error in line 4: fOJsmTWWziV S188 18,1
Error in line 1: e452138 S188 84,1
